[feat]支持内置基本类型的Collection类型转换. 例如:List<Integer>, List<String> 等等